utils: avoid 'unused argument' warnings caused by GST_BOILERPLATE_FULL

The unused data parameter in the class_init trampoline function
seems to cause warnings with some c++ compilers.

https://bugzilla.gnome.org/show_bug.cgi?id=635869